@@ -2,6 +2,7 @@
 * Client/WebUI: Suport for TLS connections with forced client-side authentication (https://hostname:4433/)
 * Client: Removed automatic conversion of old format unspent4 to the new UTXO.db
 * Client: If pong comes out but a block is still pending, timeout it and dont ask this peer for blocks again.
+* Client: "CFG.UTXOSaveSec" replaced with "CFG.UTXOSave.SecondsToTake" and "CFG.UTXOSave.BlocksToHold"
 
 1.9.4 - 2018-04-11
 NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 already generated, but have problems spending from it now.
